--- a/game/game_css.css
+++ b/game/game_css.css
@@ -25,13 +25,24 @@ h1 {
     background: #5EE270;
 }
 
-#canvas{
-    width:431px;
-    height:768px;
+#canvas
+{
+
+    /*background-color:#30c0df;*/
+    border: 2px solid black;
+    display: block;
+    margin: auto;
+    /*padding: auto;*/
+    width: 30%;
 }
+
 @media screen and (max-width: 1000px){
+    header{
+
+        width: 100%;
+    }
     #canvas{
-        width:100%;
-        height:100%;
+        height: 100%;
+        width: 100%;
     }
 }
