--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 *{ /*margin: 0;*/
 }
 body{
+
     font-family: 'Montserrat', sans-serif;
     /*background-color: red;*/
     margin: 0;
@@ -29,7 +30,7 @@ header{
     display: none;
 }
 .logo{
-
+    margin-left: 10px;
     width: 100%;
     display: flex;
 
@@ -80,6 +81,16 @@ text-align: center;
 .container img{
     margin-top: 11px;
 }
+.play{
+    border-radius: 20px;
+    background: #00cccc;
+}
+.play a{
+    color: white;
+}
+.play:active{
+    background: tan;
+}
 .future li{
 font-size: 1vw ;
 border-radius: 5px;
@@ -93,6 +104,9 @@ background: #00cccc;
 .future span{
     color: white;
 }
+.tap {
+    font-size: 5px;
+}
 ul{
     width: 100%;
 }
@@ -104,7 +118,7 @@ ul{
     margin: auto;
 }
 
-.down{
+.down {
     color: #00cccc;
     background-color: #2b2d33;
 
@@ -115,7 +129,13 @@ ul{
     display: grid;
     grid-template-columns: auto auto auto;
 }
+.down ul{
+
+    width: 80%;
+}
+
 .left li{
+    padding-left: 100px;
     border-left: 5px solid #00cccc;
     padding: 5px;
 }
@@ -130,6 +150,33 @@ ul{
     padding: 5px;
     border-left: 5px solid #00cccc;
 }
+
+ footer{
+
+
+    height: 100px;
+    text-align: center;
+    width: 100%;
+     background: #2b2d33;
+    margin: auto;
+     line-height: 100px;
+     margin-top: -20px;
+}
+
+ .text-footer{
+     padding-top: -10px;
+     font-size: 15px;
+     border-radius: 10px;
+     line-height: 60px;
+     height: 60%;
+     margin: auto;
+     width: 90%;
+     background: #00cccc;
+ }
+
+ .container{
+     visibility: visible;
+ }
 
 /*teblet*/
 @media screen and  (max-width: 1100px) {
@@ -189,6 +236,16 @@ ul{
     .logo h1{
         padding: 0;
     }
+    .text-footer{
+
+        color: white;
+        background: none;
+    }
+
+    .tap{
+        display: none;
+    }
+
 }
 
 
@@ -216,6 +273,7 @@ ul{
         top: 0;
     }
     .topnav.responsive a {
+
         float: none;
         display: block;
         text-align: left;
@@ -247,22 +305,24 @@ ul{
         display: block;
     }
     .wrapper{
+
         position: fixed;
         top: 0;
         /*left: -100%;*/
         right: -100%;
         height: 100%;
         width: 100%;
-        background: rgb(0, 0, 0);
-        /*background: linear-gradient(90deg, #f92c78, #4114a1);*/
-        /* background: linear-gradient(375deg, #1cc7d0, #2ede98); */
-        /* background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
+        background: rgba(0, 0, 0, 0.78);
+        background: linear-gradient(100deg, rgba(43, 45, 51, 0.84), rgba(0, 204, 204, 0.68));
+         /*background: linear-gradient(375deg, rgba(28, 199, 208, 0.8), rgba(46, 222, 152, 0.8));*/
+         /*background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
         transition: all 0.6s ease-in-out;
     }
     #active:checked ~ .wrapper{
         /*left: 0;*/
         right:0;
     }
+
     .menu-btn{
         position: absolute;
         z-index: 2;
@@ -324,7 +384,7 @@ ul{
     .wrapper ul{
         position: absolute;
         top: 60%;
-        left: 50%;
+        left: 45%;
         height: 90%;
         transform: translate(-50%, -50%);
         list-style: none;
@@ -339,7 +399,7 @@ ul{
         font-size: 30px;
         font-weight: 500;
         padding: 5px 30px;
-        color: #fff;
+        /*color: #000000;*/
         border-radius: 50px;
         position: absolute;
         line-height: 50px;
@@ -392,6 +452,7 @@ ul{
     }
 
     #active:checked ~ .wrapper ul li a{
+        color: #2becda;
         opacity: 1;
     }
     .wrapper ul li a{
