--- a/style.css
+++ b/style.css
@@ -178,6 +178,25 @@ ul{
      visibility: visible;
  }
 
+/* плавність*/
+.container{
+    opacity: 0;
+    animation: ani 3s forwards;
+}
+@keyframes ani {
+    0%{ opacity: 0;}
+    100% { opacity: 1;}
+}
+
+.logo img{
+    transform: translateX(-150%);
+    animation: any 1s forwards;
+}
+@keyframes any {
+    0% {transform: translateX(-150%);}
+    100% {transform: translateY(0);}
+}
+
 /*teblet*/
 @media screen and  (max-width: 1100px) {
 
@@ -313,7 +332,7 @@ ul{
         height: 100%;
         width: 100%;
         background: rgba(0, 0, 0, 0.78);
-        background: linear-gradient(100deg, rgba(43, 45, 51, 0.84), rgba(0, 204, 204, 0.68));
+        background: linear-gradient(100deg, rgba(43, 45, 51, 0.8), rgba(0, 164, 159, 0.8));
          /*background: linear-gradient(375deg, rgba(28, 199, 208, 0.8), rgba(46, 222, 152, 0.8));*/
          /*background: linear-gradient(-45deg, #e3eefe 0%, #efddfb 100%);*/
         transition: all 0.6s ease-in-out;
@@ -450,9 +469,12 @@ ul{
         font-size: 35px;
         font-weight: 600;
     }
+    #active:checked ~ .wrapper {
+        z-index: 1;
+    }
 
     #active:checked ~ .wrapper ul li a{
-        color: #2becda;
+        color: #35decb;
         opacity: 1;
     }
     .wrapper ul li a{
